# object-oriented-design

./: CMakeLists.txt
command/: .clang-format  CMakeLists.txt  diagram.drawio
command/src/: CMakeLists.txt  CommandHandler.h  ConstDocumentItem.h  Document.h  DocumentCommand.h  DocumentItem.h  History.h  ICommand.h  IDocument.h  IExporter.h  IHistory.h  IImage.h  IMenu.h  IParagraph.h  Image.h  Menu.h  Paragraph.h  main.cpp
command/src/command/: DeleteItem.h  DocumentCommand.h  Exit.h  Help.h  HistoryCommand.h  ICommand.h  IUndoableCommand.h  InsertImage.h  InsertParagraph.h  List.h  MarkDeleted.h  MenuCommand.h  Redo.h  ResizeImage.h  SetTitle.h  Undo.h
command/src/document/: Document.h  IDocument.h  IImage.h  IParagraph.h
command/tests/: CMakeLists.txt  ConstDocumentItem.cpp  Document.cpp  DocumentItem.cpp  History.cpp  Image.cpp  Menu.cpp  MockCommand.h  MockDocument.h  MockExporter.h  MockHistory.h  MockImage.h  MockMenu.h  MockParagraph.h  MockUndoableCommand.h  Paragraph.cpp  main.cpp
command/tests/command/: DeleteItem.cpp  DocumentCommand.cpp  Exit.cpp  Help.cpp  InsertImage.cpp  InsertParagraph.cpp  List.cpp  MarkDeleted.cpp  MockCommand.h  Redo.cpp  ResizeImage.cpp  SetTitle.cpp  Undo.cpp
factory/: .clang-format  CMakeLists.txt  input.txt
factory/src/: CMakeLists.txt  main.cpp
factory/src/Canvas/: ConsoleCanvas.cpp  ConsoleCanvas.h  ICanvas.h  Point.h
factory/src/Client/: Client.h
factory/src/Designer/: Designer.h  IDesigner.h
factory/src/Painter/: IPainter.h  Painter.h
factory/src/Shape/: Color.h  Ellipse.h  PictureDraft.h  Rectangle.h  RegularPolygon.h  Shape.h  Triangle.h
factory/src/ShapeFactory/: IShapeFactory.h  ShapeFactory.h
factory/tests/: CMakeLists.txt  DesignerTest.cpp
factory/tests/Canvas/: MockCanvas.h
factory/tests/Client/: Client.cpp
factory/tests/Designer/: DesignerTest.cpp  MockDesigner.h
factory/tests/Painter/: MockPainter.h  Painter.cpp
factory/tests/Shape/: EllipseTest.cpp  MockShape.h  PictureDraftTest.cpp  RectangleTest.cpp  RegularPolygonTest.cpp  TriangleTest.cpp
factory/tests/ShapeFactory/: MockShapeFactory.h  ShapeFactoryTest.cpp
patterns/strategy/: CMakeLists.txt
patterns/strategy/task1/: CMakeLists.txt
patterns/strategy/task1/SimUDuck/: SimUDuck.cpp
patterns/strategy/task1/SimUDuck/lib/: DuckFunctions.h
patterns/strategy/task1/SimUDuck/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
patterns/strategy/task1/SimUDuck/lib/Duck/Dance/: DanceMinuet.h  DanceNoWay.h  DanceWaltz.h  IDanceBehavior.h
patterns/strategy/task1/SimUDuck/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h
patterns/strategy/task1/SimUDuck/lib/Duck/Quack/: MuteQuackBehavior.h  QuackBehavior.h  SqueakBehavior.h
patterns/strategy/task2/: CMakeLists.txt
patterns/strategy/task2/SimUDuck/: SimUDuck.cpp
patterns/strategy/task2/SimUDuck/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  RedheadDuck.h  RubberDuck.h
patterns/strategy/task2/SimUDuck/lib/Duck/Dance/: DanceMinuet.h  DanceNoWay.h  IDanceBehavior.h
patterns/strategy/task2/SimUDuck/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  FlyWithWingsAndCount.h
patterns/strategy/task2/SimUDuck/lib/Duck/Quack/: IQuackBehavior.h  MuteQuackBehavior.h  SqueakBehavior.h
patterns/strategy/task3/: CMakeLists.txt
patterns/strategy/task3/SimUDuck/: SimUDuck.cpp
patterns/strategy/task3/SimUDuck/lib/: DuckFunctions.h
patterns/strategy/task3/SimUDuck/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
patterns/strategy/task3/SimUDuck/lib/Duck/Dance/: DanceFunctions.h
patterns/strategy/task3/SimUDuck/lib/Duck/Fly/: FlyFunctions.h
patterns/strategy/task3/SimUDuck/lib/Duck/Quack/: QuackFunctions.h
strategy/: .clang-format  CMakeLists.txt
strategy/task1/: CMakeLists.txt  SimUDuck.cpp
strategy/task1/lib/: DuckFunctions.h
strategy/task1/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
strategy/task1/lib/Duck/Dance/: DanceMinuet.h  DanceWaltz.h  IDanceBehavior.h
strategy/task1/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h
strategy/task1/lib/Duck/Quack/: MuteQuackBehavior.h  QuackBehavior.h
strategy/task2/: CMakeLists.txt  SimUDuck.cpp
strategy/task2/lib/Duck/: Duck.h  MallardDuck.h  RedheadDuck.h  RubberDuck.h
strategy/task2/lib/Duck/Dance/: DanceNoWay.h  IDanceBehavior.h
strategy/task2/lib/Duck/Fly/: FlyWithWingsAndCount.h
strategy/task2/lib/Duck/Quack/: IQuackBehavior.h  SqueakBehavior.h
strategy/task3/: CMakeLists.txt  SimUDuck.cpp
strategy/task3/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
strategy/task3/lib/Duck/Dance/: DanceFunctions.h
strategy/task3/lib/Duck/Fly/: FlyFunctions.h
strategy/task3/lib/Duck/Quack/: QuackFunctions.h
