add_executable(
        command
        main.cpp
        IExporter.h
        Menu.h
        command/DocumentCommand.h
        command/ICommand.h
        command/IUndoableCommand.h
        command/MenuCommand.h
        document/Document.h
        document/DocumentItem.h
        document/IDocument.h
        document/IImage.h
        document/IParagraph.h
        document/Image.h
        document/Paragraph.h
)
