add_executable(
        command
        main.cpp
        History.h
        IExporter.h
        IHistory.h
        IMenu.h
        Menu.h
        command/DocumentCommand.h
        command/Exit.h
        command/Help.h
        command/HistoryCommand.h
        command/ICommand.h
        command/IUndoableCommand.h
        command/InsertParagraph.h
        command/List.h
        command/MenuCommand.h
        command/Redo.h
        command/Undo.h
        document/Document.h
        document/DocumentItem.h
        document/IDocument.h
        document/IImage.h
        document/IParagraph.h
        document/Image.h
        document/Paragraph.h
)
