add_executable(
        factory
        main.cpp
        Canvas/ICanvas.h
        Shape/Shape.h
        Shape/Color.h
        Canvas/Point.h
        Shape/Ellipse.h
        Shape/Triangle.h
        Shape/Rectangle.h
        Shape/RegularPolygon.h
        Canvas/ConsoleCanvas.cpp
        Shape/PictureDraft.h
        Painter/IPainter.h
        Painter/Painter.h
        Designer/IDesigner.h
        Designer/Designer.h
        ShapeFactory/IShapeFactory.h
)
